--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "build": "node node_modules/webpack/bin/webpack.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
-  },
-  "devDependencies": {
-    "browserify": "^13.3.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "flux": "^3.1.2",
-    "gulp": "^3.9.1",
-    "object-assign": "^4.1.0",
-    "reactify": "^1.1.1",
-    "vinyl-source-stream": "^1.1.0"
-  }
+    "object-assign": "^4.1.1",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5"
+  },
+  "devDependencies": {}
 }
